syntax = "proto3";

message ClientMessage{
    int32 serial = 1;
    int64 timestamp = 2;
    string serviceType = 3;
    int32 messageId = 4;
    bytes data = 5;
}

message ServerMessage{
    int32 messageId = 1;
    string serviceType = 2;
    int64 timestamp = 3;
    int32 errorCode = 4;
    bytes data = 6;
}

message LoginRequest {
    int64 uid = 1;
    string token = 2;
}

message LoginResponse {
}

message HeartBeatRequest {

}

message HeartBeatResponse {
    int64 time = 1;
}